liveshare group activity

--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Bonus Calculator Object Challenge</title>
-    <script src="client.js" charset="utf-8"></script>
-  </head>
-  <body>
-    <h1>Bonus Calculator Object Challenge</h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Bonus Calculator Object Challenge</title>
+  <script src="client.js" charset="utf-8"></script>
+</head>
+
+<body>
+  <div class="container-1">
+    <h2>
+      <input placeholder="name" id="nameInput" />
+      <input placeholder="employee number" id="employee numberInput" />
+      <input placeholder="review rating" id="review ratingInput" />
+      <input placeholder="annual salary" id="annual salaryInput" />
+      <button id="click Me"></button>
+    </h2>
+    <div class="flex-box-container-1">
+      <div>
+        <button class="btn btn-primary" onclick="(click Me)">Click me</button>
+
+      </div>
+      <div>
+        <button class="btn btn-danger" onclick="reset()">reset</button>
+      </div>
+    </div>
+    <div class="flex-box-container-1">
+      <div id="flex-box-result"></div>
+    </div>
+  </div>
+  <h1>Bonus Calculator Object Challenge</h1>
+</body>
+
 </html>
